--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- System Splash be Transparent -->
     </style>
 
     <style name="Theme.MyApplication.NoActionBar">
@@ -22,4 +25,9 @@
     <style name="Theme.MyApplication.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.MyApplication.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Theme.TransparentSplash" parent="Theme.MaterialComponents.DayNight.DarkActionBar" >
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
 </resources>
