--- a/app/src/main/res/drawable/ic_menu_camera.xml
+++ b/app/src/main/res/drawable/ic_menu_camera.xml
@@ -3,10 +3,13 @@
     android:height="24dp"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
+
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M12,12m-3.2,0a3.2,3.2 0,1 1,6.4 0a3.2,3.2 0,1 1,-6.4 0" />
+        android:fillColor="#000000"
+        android:pathData="M5,12 L11,6 L17,12 H13V18 H9V12 H5Z" />
+
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M9,2L7.17,4H4c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V6c0,-1.1 -0.9,-2 -2,-2h-3.17L15,2H9zm3,15c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5z" />
+        android:fillColor="#000000"
+        android:pathData="M5,20 H17 V22 H5 Z" />
+
 </vector>
