--- a/app/src/main/res/drawable/ic_menu_gallery.xml
+++ b/app/src/main/res/drawable/ic_menu_gallery.xml
@@ -3,7 +3,17 @@
     android:height="24dp"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
+
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M22,16V4c0,-1.1 -0.9,-2 -2,-2H8c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2zm-11,-4l2.03,2.71L16,11l4,5H8l3,-4zM2,6v14c0,1.1 0.9,2 2,2h14v-2H4V6H2z" />
+        android:fillColor="#000000"
+        android:pathData="M3,3v18h18V7.83L16.17,3H3z" />
+
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M6,5h10v4H6z" />
+
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M12,17a2,2 0 1,0 0,-4 2,2 0 0,0 0,4z" />
+
 </vector>
